--- a/src/app/auth/auth-login/auth-login.component.html
+++ b/src/app/auth/auth-login/auth-login.component.html
@@ -59,7 +59,7 @@
                                             [class]="'input-icon iw-20 ih-20'">
                                         </app-feather-icon>
                                         @if (loginForm.get('email')?.invalid && loginForm.get('email')?.touched) {
-                                            <small class="text-danger">Veuillez entrer un email valide</small>
+                                            <small class="text-danger">Please enter a valid email</small>
                                         }
                                     </div>
 
@@ -86,7 +86,7 @@
                                             </app-feather-icon>
                                         }
                                         @if (loginForm.get('password')?.invalid && loginForm.get('password')?.touched) {
-                                            <small class="text-danger">Le mot de passe est requis</small>
+                                            <small class="text-danger">Password is required</small>
                                         }
                                     </div>
 
