--- a/src/app/component/other-pages/event/event.component.html
+++ b/src/app/component/other-pages/event/event.component.html
@@ -48,7 +48,7 @@
             </div>
         </div>
     </div>
-    <div class="event-timeline">
+    <!-- <div class="event-timeline">
         <div class="timeline-title">
             <div class="media">
                 <img src="assets/images/icon/event.png" class="img-fluid " alt="">
@@ -85,6 +85,22 @@
             </li>
         </ul>
     </div>
+</div> -->
+<div class="profile-menu ms-0 me-0">
+    
+    <ul class="right-menu d-xl-flex d-none">
+        <li>
+            <a [routerLink]="['/others', 'add-event']">
+                <h6>Create Event</h6>
+            </a>
+            
+        </li>
+        <li>
+            <a routerLink="#">
+                <h6>create session</h6>
+            </a>
+        </li>
+    </ul>
 </div>
 <div class="row event-body">
     <div class="col-xl-6">
