--- a/src/app/component/other-pages/event/ressource/ressource.component.html
+++ b/src/app/component/other-pages/event/ressource/ressource.component.html
@@ -1,66 +1,71 @@
 <div class="card p-4 mb-4">
-    <h1 class="mb-3">Add Ressources</h1>
-    <form>
-      <div class="form-group mb-3">
-        <label>Name</label>
-        <input type="text" [(ngModel)]="name" [ngModelOptions]="{standalone: true}" class="form-control" id="name" name="text" placeholder="Enter Name">
-      </div>
-  
-      <div class="form-group mb-3">
-        <label>Type de ressource</label>
-        <input type="text" [(ngModel)]="typeR" [ngModelOptions]="{standalone: true}" class="form-control" id="typeR" name="typeR" placeholder="Enter type">
-      </div>
-      
-      <div class="form-group mb-3">
-        <label>Quantite du Ressources</label>
-        <input type="number" [(ngModel)]="quantite" [ngModelOptions]="{standalone: true}" class="form-control" id="quantite" name="quantite" placeholder="0">
-      </div>
-      
-      <div class="form-group mb-3">
-        <label>Statut</label>
-        <select [(ngModel)]="statutR" [ngModelOptions]="{standalone: true}" class="form-control" id="statutR" name="statutR">
-          <option value="disponible">Disponible</option>
-          <option value="non-disponible">Non-disponible</option>
-        </select>
-      </div>
-      
-      <button type="submit" class="btn btn-primary" (click)="saveRess()">Submit</button>
-    </form>
-  </div>
-  
-  <div class="card p-4">
-    <h1 class="mb-3">Ressource Table</h1>
-    <div class="table-responsive">
-      <table class="table">
-        <thead class="bg-light">     
-          <tr>
-            <th scope="col">Name</th>
-            <th scope="col">Type Ressource</th>
-            <th scope="col">Quantite</th>
-            <th scope="col">Statut</th>
-            <th scope="col">Option</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let RessourceItem of RessourceArray">
-            <td>{{RessourceItem.name}}</td>
-            <td>{{RessourceItem.typeR}}</td>
-            <td>{{RessourceItem.quantite}}</td>
-            <td>
-              <span [ngClass]="{'badge bg-success': RessourceItem.statutR === 'disponible', 'badge bg-danger': RessourceItem.statutR === 'non-disponible'}">
-                {{RessourceItem.statutR}}
-              </span>
-            </td>
-            <td>
-              <button type="button" class="btn btn-sm btn-outline-primary me-2" (click)="setUpdateRess(RessourceItem)">
-                <i class="bi bi-pencil"></i> Edit
-              </button>
-              <button type="button" class="btn btn-sm btn-outline-danger" (click)="setDeleteRess(RessourceItem)">
-                <i class="bi bi-trash"></i> Delete
-              </button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+  <h1 class="mb-6">Add a resource</h1>
+  <form>
+    <div class="form-group mb-3">
+      <label for="name">Nom</label>
+      <input type="text" [(ngModel)]="name" [ngModelOptions]="{standalone: true}" class="form-control" id="name" name="name" placeholder="Entrez le nom">
+      <div *ngIf="serverErrors?.name" class="text-danger">{{ serverErrors.name }}</div>
     </div>
+
+    <div class="form-group mb-3">
+      <label for="typeR">Type de ressource</label>
+      <input type="text" [(ngModel)]="typeR" [ngModelOptions]="{standalone: true}" class="form-control" id="typeR" name="typeR" placeholder="Entrez le type">
+      <div *ngIf="serverErrors?.typeR" class="text-danger">{{ serverErrors.typeR }}</div>
+    </div>
+
+    <div class="form-group mb-3">
+      <label for="quantite">Quantité</label>
+      <input type="number" [(ngModel)]="quantite" [ngModelOptions]="{standalone: true}" class="form-control" id="quantite" name="quantite" placeholder="0">
+      <div *ngIf="serverErrors?.quantite" class="text-danger">{{ serverErrors.quantite }}</div>
+    </div>
+
+    <div class="form-group mb-3">
+      <label for="statutR">Statut</label>
+      <select [(ngModel)]="statutR" [ngModelOptions]="{standalone: true}" class="form-control" id="statutR" name="statutR">
+        <option value="disponible">Disponible</option>
+        <option value="non-disponible">Non disponible</option>
+      </select>
+      <div *ngIf="serverErrors?.statutR" class="text-danger">{{ serverErrors.statutR }}</div>
+    </div>
+
+    <button type="button" class="btn btn-primary" (click)="saveRess()">Soumettre</button>
+  </form>
+</div>
+
+<!-- Tableau des ressources -->
+<div class="card p-4">
+  <h1 class="mb-3">Tableau des Ressources</h1>
+  <div class="table-responsive">
+    <table class="table">
+      <thead class="bg-light">
+        <tr>
+          <th scope="col">Nom</th>
+          <th scope="col">Type Ressource</th>
+          <th scope="col">Quantité</th>
+          <th scope="col">Statut</th>
+          <th scope="col">Options</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let RessourceItem of RessourceArray">
+          <td>{{ RessourceItem.name }}</td>
+          <td>{{ RessourceItem.typeR }}</td>
+          <td>{{ RessourceItem.quantite }}</td>
+          <td>
+            <span [ngClass]="{'badge bg-success fw-bold': RessourceItem.statutR === 'disponible', 'badge bg-danger fw-bold': RessourceItem.statutR === 'non-disponible'}">
+              {{ RessourceItem.statutR }}
+            </span>
+          </td>
+          <td>
+            <button type="button" class="btn btn-sm btn-outline-primary me-2" (click)="setUpdateRess(RessourceItem)">
+              <i class="bi bi-pencil">Modifier</i> 
+            </button>
+            <button type="button" class="btn btn-sm btn-outline-danger" (click)="setDeleteRess(RessourceItem)">
+              <i class="bi bi-trash">Supprimer</i> 
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </div>
+</div>
