--- a/src/app/auth/auth-login/auth-login.component.html
+++ b/src/app/auth/auth-login/auth-login.component.html
@@ -40,7 +40,7 @@
                         </div>
                         <div class="login-discription">
                             <h3>Hello Everyone, Welcome Back</h3>
-                            <h4>Welcome to Friendbook, please login to your account.</h4>
+                            <h4>Welcome to SmartMeet, please login to your account.</h4>
                         </div>
                         <div class="form-sec">
                             <div>
