--- a/src/app/auth/auth-login/signup.component.html
+++ b/src/app/auth/auth-login/signup.component.html
@@ -85,12 +85,12 @@
                                         <label>Role</label>
                                         <div class="form-check">
                                             <input type="radio" class="form-check-input" formControlName="roles" value="ROLE_USER">
-                                            <label class="form-check-label">User</label>
+                                            
                                         </div>
                                        
                                         <div class="form-check">
                                             <input type="radio" class="form-check-input" formControlName="roles" value="ROLE_SPONSOR">
-                                            <label class="form-check-label">Sponsor</label>
+                                            <label class="form-check-label">Are You Sponsor</label>
                                         </div>
                                         @if (signupForm.get('roles')?.invalid && signupForm.get('roles')?.touched) {
                                             <small class="text-danger">Please select a role</small>
