--- a/src/app/component/other-pages/event/add-event/add-event.component.html
+++ b/src/app/component/other-pages/event/add-event/add-event.component.html
@@ -4,8 +4,8 @@
   
   <div class="event-cover">
     <div class="event-img"
-        style="background-image: url(assets/images/cover/5.jpg);background-size: cover; background-position: center center; background-repeat: no-repeat; display: block;">
-        <img src="assets/images/cover/5.jpg" class="img-fluid  bg-img" alt="" style="display: none;">
+        style="background-image: url(assets/images/cover/add.jpg);background-size: cover; background-position: center center; background-repeat: no-repeat; display: block;">
+        <img src="assets/images/cover/add.jpg" class="img-fluid  bg-img" alt="" style="display: none;">
         <div class="event-content">
             <h1>ADD EVENT </h1>
         </div>
