--- a/src/app/component/other-pages/event/event.component.html
+++ b/src/app/component/other-pages/event/event.component.html
@@ -4,8 +4,8 @@
 
 <div class="event-cover">
     <div class="event-img"
-        style="background-image: url(assets/images/cover/5.jpg);background-size: cover; background-position: center center; background-repeat: no-repeat; display: block;">
-        <img src="assets/images/cover/5.jpg" class="img-fluid  bg-img" alt="" style="display: none;">
+        style="background-image: url(assets/images/cover/event.png);background-size: cover; background-position: center center; background-repeat: no-repeat; display: block;">
+        <img src="assets/images/cover/event.png" class="img-fluid  bg-img" alt="" style="display: none;">
         <div class="event-content">
             <h1>latest events</h1>
         </div>
@@ -16,20 +16,20 @@
                 <app-feather-icon [class]="'fas ms-1 fa-arrow-right'"></app-feather-icon>
             </a>
         </div>
-        <div class="settings">
+        <!-- <div class="settings">
             <div class="setting-btn">
                 <a href="javascript:void(0)">
                     <app-feather-icon [icons]="'rotate-cw'"
                         [class]="'icon icon-dark stroke-width-3 iw-11 ih-11'"></app-feather-icon>
                 </a>
-            </div>
-            <div class="setting-btn ms-2 setting-dropdown" (clickOutside)="outSideClose()">
+            </div> -->
+            <!-- <div class="setting-btn ms-2 setting-dropdown" (clickOutside)="outSideClose()">
                 <div class=" btn-group custom-dropdown arrow-none dropdown-sm">
                     <a href="javascript:void(0)" [class.show]="isShow" (click)="isShow =!isShow">
                         <app-feather-icon [icons]="'sun'"
                             [class]="'icon-dark stroke-width-3 icon iw-11 ih-11'"></app-feather-icon>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right custom-dropdown" [class.show]="isShow"
+                    </a> -->
+                    <!-- <div class="dropdown-menu dropdown-menu-right custom-dropdown" [class.show]="isShow"
                         style="position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate(-149px, 23px);">
                         <ul>
                             <li>
@@ -43,10 +43,10 @@
                                         [class]="'icon-font-light iw-16 ih-16'"></app-feather-icon>view profile</a>
                             </li>
                         </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
+                    </div> -->
+                <!-- </div>
+            </div> -->
+        <!-- </div> -->
     </div>
     <!-- <div class="event-timeline">
         <div class="timeline-title">
@@ -96,16 +96,60 @@
             
         </li>
         <li>
-            <a routerLink="#">
-                <h6>create session</h6>
+            <a href="javascript:void(0)" (click)="openSessionModal()">
+                <h6>Create Session</h6>
             </a>
+
         </li>
     </ul>
 </div>
+<!-- Modal pour créer une session -->
+<div *ngIf="showSessionModal" class="modal-overlay">
+    <div class="modal">
+        <div class="modal-content">
+            <h2>Créer une session</h2>
+            <form [formGroup]="sessionForm" (ngSubmit)="onSessionSubmit()">
+                <div class="form-group">
+                    <label>Nom de la session</label>
+                    <input type="text" formControlName="titre" class="form-control" placeholder="Entrez le nom de la session">
+                </div>
+                <div class="form-group">
+                    <label>Date de la session</label>
+                    <input type="date" formControlName="date" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label>Événement</label>
+                    <select formControlName="nomEvent" class="form-control">
+                        <option *ngFor="let event of events" [value]="event.nomEvent">{{ event.nomEvent }}</option>
+                    </select>
+                </div>
+                <br>
+                <button type="submit" class="btn btn-success">Créer</button>
+                <button type="button" class="btn btn-secondary" (click)="closeSessionModal()">Annuler</button>
+            </form>
+        </div>
+    </div>
+</div>
+
+
+
 <div class="row event-body">
     <div class="col-xl-6">
-        <app-event-section [class]="class"></app-event-section>
-        <app-event-category></app-event-category>
+        <app-event-section [events]="events" [class]="class"></app-event-section>    
+            <!-- <app-event-category></app-event-category> -->
+            <div class="session-list">
+                <h2>Liste des Sessions</h2>
+                <ul *ngIf="sessions.length > 0; else noSession">
+                    <li *ngFor="let session of sessions">
+                        <h4>{{ session.titre }}</h4>
+                        <p>Date: {{ session.date }}</p>
+                    </li>
+                </ul>
+                <ng-template #noSession>
+                    <p>Aucune session disponible.</p>
+                </ng-template>
+            </div>
+            
     </div>
     <div class="col-xl-6">
         <app-calendar></app-calendar>
