--- a/src/app/component/profile-pages/timeline/timeline.component.html
+++ b/src/app/component/profile-pages/timeline/timeline.component.html
@@ -6,18 +6,19 @@
 <div class="container-fluid section-t-space px-0 layout-default">
     <div class="page-content">  
         <div class="content-left">
-            <app-about-intro-my-self [introMySelf]="introMySelf"></app-about-intro-my-self>
+            <!-- <app-about-intro-my-self [introMySelf]="introMySelf"></app-about-intro-my-self>
             <div class="suggestion-box section-t-space">
                 <app-friend-suggestion></app-friend-suggestion>
-            </div>
-            <div class="sticky-top d-xl-block d-none">
-                <div class="page-list section-t-space">
-                    <app-liked-pages [rating]="true"></app-liked-pages>
-                </div>
-            </div>
+            </div> -->
+            <!-- <div class="sticky-top d-xl-block d-none">
+                <div class="page-list section-t-space"> -->
+                    <!-- <app-liked-pages [rating]="true"></app-liked-pages> -->
+                <!-- </div>
+            </div> -->
         </div>
-        <div class="content-center">
+        <!-- <div class="content-center">
             <app-create-post [isCreatePost]="isCreatePost"></app-create-post>
+
             <div class="overlay-bg"></div>
             <div class="post-panel infinite-loader-sec section-t-space">
                 @for (item of visiblePosts; track item) {
@@ -37,21 +38,45 @@
                 <p>no more post</p>
             </div>
             }
-        </div>
-        }
+        </div> -->
+        
     </div>
     <div class="content-right d-xl-block d-none">
-        <app-college-meet></app-college-meet>
+        <!-- <app-college-meet></app-college-meet> -->
         <div class="gallery-section section-t-space">
-            <app-gallery></app-gallery>
+            <!-- <app-gallery></app-gallery> -->
         </div>
         <div class="activity-list section-t-space">
-            <app-activity-feed></app-activity-feed>
+            <!-- <app-activity-feed></app-activity-feed> -->
         </div>
         <div class="sticky-top">
-            <app-events [events]="event"></app-events>
+           
+             <!-- <app-event-section [events]="events"></app-event-section> -->
+             <div class="container mt-4">
+                <h2 class="text-center mb-4"> Liste des Événements</h2>
+                
+                <div *ngFor="let event of events" class="card event-card shadow-sm">
+                    <div class="card-body d-flex align-items-center">
+                        <div class="event-details flex-grow-1">
+                            <h5 class="card-title text-primary">{{ event.nomEvent }}</h5>
+                            <p class="card-text text-muted">{{ event.description }}</p>
+                        </div>
+                        <div class="event-actions">
+                            <button class="btn btn-dark-blue me-2" (click)="updateEvent(event.idEvent ,event)">
+                                 Modifier
+                            </button>
+                            <button class="btn btn-light-blue" (click)="deleteEvent(event.idEvent)">
+                                 Supprimer
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+            
+                  
             <div class="hashtag-list section-t-space">
-                <app-worldwide-trends></app-worldwide-trends>
+                <!-- <app-worldwide-trends></app-worldwide-trends> -->
             </div>
         </div>
     </div>
