--- a/src/app/component/profile-pages/timeline/timeline.component.html
+++ b/src/app/component/profile-pages/timeline/timeline.component.html
@@ -71,13 +71,31 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            
-            
-                  
+            </div>          
             <div class="hashtag-list section-t-space">
                 <!-- <app-worldwide-trends></app-worldwide-trends> -->
             </div>
+             <!-- Liste des Sessions -->
+    <div class="session-list mt-4">
+        <h2 class="text-center mb-4">Liste des Sessions</h2>
+        <div *ngFor="let session of sessions" class="card session-card shadow-sm">
+            <div class="card-body d-flex align-items-center">
+                <div class="session-details flex-grow-1">
+                    <h5 class="card-title text-primary">{{ session.titre }}</h5>
+                    <p class="card-text text-muted">Date: {{ session.date | date: 'dd/MM/yyyy' }}</p>
+                </div>
+                <div class="session-actions">
+                    
+                    <button class="btn btn-light-blue" (click)="deleteSession(session.idSession)">
+                         Supprimer
+                    </button>
+                </div>
+            </div>
+        </div>
+        <ng-template #noSession>
+            <p class="text-center">Aucune session disponible.</p>
+        </ng-template>
+    </div>
         </div>
     </div>
 </div>
