--- a/src/app/shared/components/common/create-post/create-post.component.html
+++ b/src/app/shared/components/common/create-post/create-post.component.html
@@ -1,93 +1,129 @@
-<div class="create-post">
-    <div class="static-section" [class.d-none]="isColor">
-        <app-create-option (post)="getPost($event)"></app-create-option>
-    </div>
-    <div class="create-bg">
-        <div class="bg-post {{SelectedColor}}" id="bg-post1" [class.d-block]="isColor">
-            <div class="input-sec" >
-                <input type="text" class="form-control enable" placeholder="write something here..">
-                <div class="close-icon">
-                    <a href="javascript:void(0)" (click)="isColor = false">
-                        <app-feather-icon [icons]="'x'" [class]="'iw-20 ih-20'"></app-feather-icon>
-                    </a>
-                </div>
-            </div>
+<div class="post-container">
+  <!-- Zone de création de publication -->
+  <div class="create-post">
+    <div class="post-header">
+      <img src="assets/images/user-avatar.png" class="user-avatar" alt="User Avatar">
+      <input type="text" id="newPostContent" [(ngModel)]="newPostContent" name="newPostContent" required #newPostContentRef="ngModel" (click)="isCreatePost = true">
+      <div *ngIf="newPostContentRef.invalid && newPostContentRef.touched">
+        <div *ngIf="newPostContentRef?.errors?.['required']">
+          <div>Le contenu est obligatoire</div>
         </div>
-        <ul class="gradient-bg">
-            @for (item of color; track item) {
-            <li (click)="changeColor(item.class)" class="{{item.class}}"></li>
-            }
-        </ul>
+      </div>
     </div>
-    @if(isCreatePost){
-    <div class="options-input {{class}}">
-        <a id="icon-close" href="javascript:void(0)" (click)="class = ''">
-            <app-feather-icon [icons]="'x'" [class]="'iw-15 icon-font-light icon-close'"></app-feather-icon>
-        </a>
-        <div class="search-input feeling-input">
-            <input type="text" class="form-control enable" list="feelings" placeholder="How Are You Feeling?">
-            <datalist id="feelings">
-                <option value="Happy">
-                <option value="Sad">
-                <option value="Angry">
-                <option value="Worried">
-                <option value="Shy">
-                <option value="Excited">
-                <option value="Surprised">
-                <option value="Silly">
-                <option value="Embarrassed">
-            </datalist>
-            <a href="javascript:void(0)">
-                <app-feather-icon [class]="'iw-15 icon-left icon-font-light'" [icons]="'smile'"></app-feather-icon>
-            </a>
-        </div>
-        <div class="search-input place-input">
-            <input type="text" class="form-control" placeholder="search for places...">
-            <a href="javascript:void(0)">
-                <app-feather-icon [class]="'iw-15 icon-left icon-font-light'" [icons]="'map-pin'"></app-feather-icon>
-            </a>    
-        </div>
-        <div class="search-input friend-input">
-            <input type="text" class="form-control" list="friends" placeholder="search your friends...">
-            <datalist id="friends">
-                <option value="Paige Turner">
-                <option value="Bob Frapples">
-                <option value="Josephin water">
-                <option value="Petey Cruiser">
-                <option value="Anna Sthesia">
-                <option value="Paul Molive">
-                <option value="Anna Mull">
-            </datalist>
-            <a href="javascript:void(0)">
-                <app-feather-icon [class]="'iw-15 icon-left icon-font-light'" [icons]="'tag'"></app-feather-icon>
-            </a>
-        </div>
+    
+    <div class="post-options">
+      <button *ngFor="let color of colors" 
+              class="color-btn" 
+              [ngClass]="color.class"
+              (click)="changeColor(color.class)">
+      </button>
     </div>
-    }
-    <ul class="create-btm-option">
-        <li>
-            <input class="choose-file" type="file">
-            <h5>
-                <app-feather-icon [icons]="'camera'" [class]="'iw-14'"></app-feather-icon>album
-            </h5>
-        </li>
-        <li>
-            <h5 (click)="change('feeling')">
-                <app-feather-icon [icons]="'smile'" [class]="'iw-15'"></app-feather-icon>feelings & acitivity
-            </h5>
-        </li>
-        <li>
-            <h5 (click)="change('place')">
-                <app-feather-icon [icons]="'map-pin'" [class]="'iw-15'"></app-feather-icon>check in
-            </h5>
-        </li>
-        <li>
-            <h5 (click)="change('friends')">
-                <app-feather-icon [icons]="'tag'" [class]="'iw-15'"></app-feather-icon>tag friends
-            </h5>
-        </li>
-    </ul>
-    <div id="post-btn1" class="post-btn" [class.d-block]="isPost">
-        <button  class="Disable">post</button>
+    <button (click)="addPost()">Publier</button>
+  </div>
+  
+  <!-- Affichage des publications -->
+  <div *ngFor="let post of posts">
+    <div *ngIf="!post.hidden" class="post">
+      <div class="post-header">
+        <img src="assets/images/user-avatar.png" class="user-avatar" alt="User Avatar">
+        <div>
+          <h4>{{ post.userName }}</h4>
+        </div>
+        
+        <div class="post-actions">
+          <button (click)="toggleMenu(post)">...</button>
+          <div *ngIf="post.showMenu" class="popup-menu">
+            <ul>
+              <li><a (click)="openEditModal(post)">Modifier le post</a></li>
+              <li><a (click)="deletePost(post)">Supprimer le post</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      
+      <div class="post-content" [ngClass]="post.color">
+        <p>{{ post.content }}</p>
+      </div>
+      
+      <!-- Réactions -->
+      <div class="post-reactions">
+        <span (click)="reactToPost(post, ReactionType.LIKE)">👍 {{ post.likes || 0 }}</span>
+        <span (click)="reactToPost(post, ReactionType.LOVE)">❤️ {{ post.loves || 0 }}</span>
+        <span (click)="reactToPost(post, ReactionType.HAHA)">😂 {{ post.hahas || 0 }}</span>
+        <span (click)="reactToPost(post, ReactionType.WOW)">😮 {{ post.wows || 0 }}</span>
+      </div>
+      
+<!-- Commentaires -->
+<div class="comments">
+  <button (click)="toggleComments(post)">▼ Afficher les commentaires</button>
+  <div *ngIf="post.showComments">
+    <div *ngFor="let comment of post.commentList">
+      <div class="comment">
+        <img src="assets/images/user-avatar.png" class="comment-avatar" alt="User Avatar">
+        <div class="comment-content">
+          <h5>{{ comment.userName }}</h5>
+          <!-- Affichage du commentaire ou du champ d'édition -->
+          <ng-container *ngIf="!comment.isEditing">
+            <p>{{ comment.text }}</p>
+          </ng-container>
+          <ng-container *ngIf="comment.isEditing">
+            <input type="text" [(ngModel)]="comment.newText" />
+            <button (click)="cancelEditComment(post, comment)">Annuler</button>
+            <button (click)="saveEditComment(post, comment)">Enregistrer</button>
+          </ng-container>
+        </div>
+
+        <!-- Menu d'actions du commentaire -->
+        <div class="comment-actions">
+          <button (click)="toggleCommentMenu(comment)">...</button>
+          <div *ngIf="comment.showMenu" class="popup-menu">
+            <ul>
+              <li><a (click)="editComment(comment)">Modifier</a></li>
+              <li><a (click)="deleteComment(post, comment)">Supprimer</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
+
+  <!-- Ajouter un commentaire -->
+  <div class="add-comment">
+    <img src="assets/images/user-avatar.png" class="comment-avatar" alt="User Avatar">
+    <input type="text" id="commentText" [(ngModel)]="commentText" name="commentText" required #commentTextRef="ngModel">
+    <div *ngIf="commentTextRef.invalid && commentTextRef.touched">
+      <div *ngIf="commentTextRef?.errors?.['required']">
+        <div>Le commentaire est obligatoire</div>
+      </div>
+    </div>
+    <button (click)="addComment(post)">Ajouter</button>
+  </div>
+</div>
+</div>
+</div>
+   
+
+
+<!-- Edit Post Modal -->
+<div class="modal" *ngIf="editPostModalVisible">
+  <div class="modal-content">
+    <span class="close" (click)="closeEditModal()">&times;</span>
+    <h2>Modifier la publication</h2>
+    <div class="create-post">
+      <div class="post-header">
+        <img src="assets/images/user-avatar.png" class="user-avatar" alt="User Avatar">
+        <input type="text" id="editPostContent" [(ngModel)]="editPostContent" name="editPostContent" required #editPostContentRef="ngModel">
+        <div *ngIf="editPostContentRef.invalid && editPostContentRef.touched">
+          <div *ngIf="editPostContentRef?.errors?.['required']">
+            <div>Le contenu est obligatoire</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="post-options">
+        <button *ngFor="let color of colors" class="color-btn" [ngClass]="color.class" (click)="changeEditColor(color.class)"></button>
+      </div>
+      <button (click)="updatePost()">Mettre à jour</button>
+      <button (click)="closeEditModal()">Annuler</button>
+    </div>
+  </div>
 </div>
