--- a/src/app/component/favorite-page/group-listing/list-box/list-box.component.html
+++ b/src/app/component/favorite-page/group-listing/list-box/list-box.component.html
@@ -1,4 +1,4 @@
-<div class="list-box" *ngFor="let group of groups">
+<div class="list-box" >
     <div class="cover-img bg-size" 
          [ngStyle]="{'background-image':   getGroupImage(group.photo)  }"
          style="background-size: cover;background-position: center center;background-repeat: no-repeat;display: block;">
