--- a/src/app/component/favorite-page/group-listing/group-popup/group-popup.component.html
+++ b/src/app/component/favorite-page/group-listing/group-popup/group-popup.component.html
@@ -1,13 +1,13 @@
 <div class="modal">
   <div class="modal-content">
     <div class="modal-header">
-      <h2>Créer un groupe</h2>
+      <h2>Create Group</h2>
       <button type="button" class="close-button" (click)="closePopup()">&times;</button>
     </div>
 
     <form (ngSubmit)="onSubmit()" class="modal-form">
       <div class="form-group">
-        <label for="name">Nom du groupe:</label>
+        <label for="name">group name:</label>
         <input id="name" [(ngModel)]="groupData.name" name="name" required placeholder="Entrez le nom du groupe">
       </div>
 
@@ -17,21 +17,21 @@
       </div>
 
       <div class="form-group">
-        <label for="visibility">Visibilité:</label>
+        <label for="visibility">Visibility:</label>
         <select id="visibility" [(ngModel)]="groupData.visibility" name="visibility">
           <option value="PUBLIC">Public</option>
-          <option value="PRIVATE">Privé</option>
+          <option value="PRIVATE">Private</option>
         </select>
       </div>
 
       <div class="form-group">
-        <label for="photo">Photo du groupe:</label>
+        <label for="photo"> Group photo:</label>
         <input type="file" id="photo" (change)="onFileSelected($event)" accept="image/*">
       </div>
 
       <div class="form-buttons">
-        <button type="button" class="btn-cancel" (click)="closePopup()">Annuler</button>
-        <button type="submit" class="btn-submit">Créer le groupe</button>
+        <button type="button" class="btn-cancel" (click)="closePopup()">Cancel</button>
+        <button type="submit" class="btn-submit">Create Groupe</button>
       </div>
     </form>
   </div>
