--- a/src/app/backEnd/back-layout/back-layout.component.html
+++ b/src/app/backEnd/back-layout/back-layout.component.html
@@ -1,5 +1,4 @@
-<router-outlet></router-outlet>
-<!-- <div class="d-flex">
+<div class="d-flex">
     <app-sidebar *ngIf="showSidebar()"></app-sidebar>
     <div class="flex-grow-1">
       <app-navbar *ngIf="showNavbar()"></app-navbar>
@@ -7,4 +6,5 @@
         <router-outlet></router-outlet>
       </div>
     </div>
-  </div> -->
+  </div>
+  
