--- a/src/app/component/profile-pages/timeline/timeline.component.html
+++ b/src/app/component/profile-pages/timeline/timeline.component.html
@@ -53,7 +53,7 @@
            
              <!-- <app-event-section [events]="events"></app-event-section> -->
              <div class="container mt-4">
-                <h2 class="text-center mb-4"> Liste des Événements</h2>
+                <h2 class="text-center mb-4"> List of event</h2>
                 
                 <div *ngFor="let event of events" class="card event-card shadow-sm">
                     <div class="card-body d-flex align-items-center">
@@ -62,11 +62,11 @@
                             <p class="card-text text-muted">{{ event.description }}</p>
                         </div>
                         <div class="event-actions">
-                            <button class="btn btn-dark-blue me-2" (click)="updateEvent(event.idEvent ,event)">
-                                 Modifier
+                            <button class="btn btn-dark-blue me-2" (click)="updateEvent(event )">
+                                 update 
                             </button>
                             <button class="btn btn-light-blue" (click)="deleteEvent(event.idEvent)">
-                                 Supprimer
+                                 delete
                             </button>
                         </div>
                     </div>
@@ -77,7 +77,7 @@
             </div>
              <!-- Liste des Sessions -->
     <div class="session-list mt-4">
-        <h2 class="text-center mb-4">Liste des Sessions</h2>
+        <h2 class="text-center mb-4">List of Session</h2>
         <div *ngFor="let session of sessions" class="card session-card shadow-sm">
             <div class="card-body d-flex align-items-center">
                 <div class="session-details flex-grow-1">
@@ -87,13 +87,13 @@
                 <div class="session-actions">
                     
                     <button class="btn btn-light-blue" (click)="deleteSession(session.idSession)">
-                         Supprimer
+                         delete
                     </button>
                 </div>
             </div>
         </div>
         <ng-template #noSession>
-            <p class="text-center">Aucune session disponible.</p>
+            <p class="text-center">NO SESSION</p>
         </ng-template>
     </div>
         </div>
