--- a/src/app/component/other-pages/event/event.component.html
+++ b/src/app/component/other-pages/event/event.component.html
@@ -10,9 +10,8 @@
             <h1>latest events</h1>
         </div>
         <div class="cover-img-detail">
-            <!-- <span>12 dec</span> -->
-            <!-- <h3>last added 10 songs</h3> -->
-            <a href="javascript:void(0)">view more
+            <a [routerLink]="['/others', 'details']"> view more
+            <!-- <a [routerLink]="['/details']">view more -->
                 <app-feather-icon [class]="'fas ms-1 fa-arrow-right'"></app-feather-icon>
             </a>
         </div>
