--- a/src/app/component/widgets/common-calender/common-calender.component.html
+++ b/src/app/component/widgets/common-calender/common-calender.component.html
@@ -118,3 +118,60 @@
     </div>
   </div>
 </div>
+<!-- <div class="card">
+  <div class="card-body">
+    <div class="calendar-default" id="calendar-container">
+      <div class="row text-center calendar-header">
+        <div class="col-sm-4 col-md-12 col-xxl-4">
+          <div class="btn-group">
+            <button class="btn btn-primary" mwlCalendarPreviousView [view]="view" [(viewDate)]="viewDate"
+              (viewDateChange)="closeOpenMonthViewDay()">Previous</button>
+            <button class="btn btn-outline-secondary" mwlCalendarToday [(viewDate)]="viewDate">Today</button>
+            <button class="btn btn-primary" mwlCalendarNextView [view]="view" [(viewDate)]="viewDate"
+              (viewDateChange)="closeOpenMonthViewDay()">Next</button>
+          </div>
+        </div>
+        <div class="col-sm-4 col-md-12 col-xxl-4">
+          <h3 class="my-2">{{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</h3>
+        </div>
+        <div class="col-sm-4 col-md-12 col-xxl-4">
+          <div class="btn-group">
+            <button class="btn btn-primary" (click)="setView(CalendarView.Month)" [class.active]="view === CalendarView.Month">Month</button>
+            <button class="btn btn-primary" (click)="setView(CalendarView.Week)" [class.active]="view === CalendarView.Week">Week</button>
+            <button class="btn btn-primary" (click)="setView(CalendarView.Day)" [class.active]="view === CalendarView.Day">Day</button>
+          </div>
+        </div>
+      </div>
+      <br />
+
+      <mwl-calendar-month-view *ngIf="view === CalendarView.Month" [viewDate]="viewDate" [events]="events" [refresh]="refresh">
+      </mwl-calendar-month-view>
+
+      <mwl-calendar-week-view *ngIf="view === CalendarView.Week" [viewDate]="viewDate" [events]="events" [refresh]="refresh">
+      </mwl-calendar-week-view>
+
+      <mwl-calendar-day-view *ngIf="view === CalendarView.Day" [viewDate]="viewDate" [events]="events" [refresh]="refresh">
+      </mwl-calendar-day-view>
+
+      <br /><br /> -->
+      <!-- <button class="btn btn-primary" (click)="addEvent()">Add new</button> -->
+    <!-- </div>
+  </div>
+</div> -->
+<!-- <ng-template #modalContent let-close="close">
+  <div class="modal-header">
+    <h5 class="modal-title">Gérer l'Événement</h5>
+    <button type="button" class="close" (click)="close()">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <p><strong>Action :</strong> {{ modalData?.action }}</p>
+    <p><strong>Événement :</strong> {{ modalData?.event?.title }}</p> -->
+
+    <!-- Vérifie que modalData?.event n'est pas undefined avant de passer à la fonction -->
+    <!-- <button *ngIf="modalData?.event" class="btn btn-primary" (click)="editEvent(modalData.event)">Modifier</button>
+    <button *ngIf="modalData?.event" class="btn btn-danger" (click)="deleteEvent(modalData.event)">Supprimer</button>
+  </div>
+</ng-template> -->
+
